# hail-mary-com2020

./: .gitattributes  .gitignore  LICENSE  Makefile  README.md  package-lock.json  requirements.txt
.github/: CODEOWNERS
.github/workflows/: checks-ci.yaml  ci.yml  dev-backend-docs-cd.yaml  dev-ci.yaml  release-cd.yaml  release-ci.yaml
DB/: init_db.py  pw.txt
backend/: .env.template  .gitignore  Makefile  README.md  app.py  main.py  pyproject.toml  requirements.txt  sqlc.yaml  test.py  uml.txt
backend/database/: __init__.py  db_constants.py  init_db.py
backend/database/data/: .gitattributes  DataAnalysis.py  dataGen.py  fixSeq.py  graphs.py  image_uploader.py
backend/database/migrations/: base.sql  fixSeq.py  schema.sql
backend/database/queries/: activity_log.sql  admin.sql  admin_issue_reports.sql  allergens.sql  analytics.sql  badge.sql  bundle.sql  category.sql  consumer.sql  forecast.sql  inbox.sql  reservations.sql  seller.sql  seller_issue_reports.sql  token.sql  user.sql
backend/docs/: database.html  index.html  internal.html  main.html  routers.html  search.js
backend/docs/database/: init_db.html
backend/docs/internal/: auth.html  database.html  logger.html  queries.html  settings.html
backend/docs/internal/auth/: creation.html  middleware.html  security.html  token.html
backend/docs/internal/database/: dependency.html  manager.html
backend/docs/internal/logger/: logger.html
backend/docs/internal/queries/: consumer.html  models.html  seller.html  token.html  user.html
backend/docs/internal/settings/: env.html
backend/docs/routers/: consumer.html  consumers.html  seller.html  sellers.html  session.html  sessions.html
backend/internal/: __init__.py
backend/internal/analytics/: co2_estimator.py  forecast.py  forecast_info.py  graphs.py  processing.py
backend/internal/auth/: __init__.py  auth.py  creation.py  middleware.py  password.py  registration.py  security.py  session.py  token.py
backend/internal/badges/: __init__.py  engine.py
backend/internal/block/: __init__.py  management.py  managment.py
backend/internal/database/: __init__.py  database.py  dependency.py  manager.py
backend/internal/geolocation/: __init__.py  distance.py  location.py  types.py
backend/internal/inbox/: __init__.py  notifications.py
backend/internal/logger/: __init__.py  logger.py
backend/internal/queries/: __init__.py  activity_log.py  admin.py  admin_issue_reports.py  allergens.py  analytics.py  badge.py  bundle.py  category.py  consumer.py  forecast.py  inbox.py  models.py  reservations.py  seller.py  seller_issue_reports.py  token.py  user.py
backend/internal/search/: __init__.py  bundle_search.py
backend/internal/settings/: __init__.py  badges_rules.yaml  config.py  env.py  settings.py
backend/routers/: __init__.py  admins.py  allergens.py  badges.py  bundles.py  categories.py  consumer.py  consumers.py  leaderboard.py  reports.py  seller.py  sellers.py  session.py  sessions.py  users.py
backend/testing/: test_bundles.py  test_consumers.py  test_database.py  tests.py
backend/testing/internal/: test_creation.py  test_distance.py  test_engine.py  test_graphs.py  test_middleware.py  test_processing.py  test_security.py
backend/testing/routers/: test_admins.py  test_bundles.py  test_consumers.py  test_sellers.py  test_users.py
deployment/: backend.dockerfile  database-init.dockerfile  frontend.dockerfile  nginx-frontend.conf
deployment/kubernetes/: 001-postgres-secret.bash  004-keel.yaml  005-ghcr-secret.bash  006-deployment-secret.yaml  006-deployment.yaml  006-minio-secret.bash  007-deployment.yaml  007-minio.yaml  007-routes.yaml  008-optional-minio-route.yaml  009-deployment-secret.yaml  010-deployment.yaml  011-routes.yaml  mysql-route.yaml  mysql.yaml  postgres-route.yaml  postgres.yaml
deployment/local/: .env.example  Makefile  docker-compose.yaml  nginx-docker.conf
frontend/: .editorconfig  .gitattributes  .prettierrc.json  README.md  eslint.config.js  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  main.jsx
frontend/src/components/: AdminsTable.jsx  Card.jsx  Category.jsx  Divider.jsx  Footer.jsx  HamburgerMenu.jsx  InfoLine.jsx  LeaderboardItem.jsx  Listing.jsx  LocationPicker.jsx  Modal.jsx  Navbar.jsx  Reservation.jsx  SellerProfileCard.jsx  SellerProfileEditForm.jsx  Tabs.jsx  Tooltip.jsx
frontend/src/config/: createBundleFormFields.js  errorReportFormFields.js  footerLinks.js  loginFormFields.js  rootAuthFields.js  signupFormFields.js
frontend/src/context/: AuthContext.jsx  AuthProvider.jsx  auth-context.js
frontend/src/hooks/: useAdminIssueReports.jsx  useAdminOpenReservations.jsx  useAdminUsers.jsx  useAllergens.jsx  useBadges.jsx  useBundle.jsx  useBundleImage.js  useCategories.jsx  useCollectReservation.jsx  useConsumerHasReserved.jsx  useConsumerProfile.jsx  useCreateAdmin.jsx  useCreateBundle.jsx  useLeaderboard.jsx  useLeaderboardTypes.jsx  useListings.jsx  useReserveBundle.jsx  useSearchBundles.jsx  useSellerAllReservations.jsx  useSellerAnalytics.jsx  useSellerAnalyticsGraphs.jsx  useSellerBundleReservations.jsx  useSellerBundles.jsx  useSellerIssueReports.jsx  useSellerProfile.jsx  useSellers.jsx  useSignup.js  useUser.jsx  useUserBadges.js  useUserImage.js  useUserImpact.js  useUserListings.jsx  useUserProfileImage.js  useUserStreak.js
frontend/src/pages/: AboutUs.jsx  AdminLogin.jsx  AdminPage.jsx  Analysis.jsx  Analytics.jsx  Bundle.jsx  Collect.jsx  ConsumerDashboard.jsx  CreateAdmin.jsx  CreateBundle.jsx  DeveloperProfile.jsx  EditProfile.jsx  Environmental.jsx  Home.jsx  Leaderboard.jsx  Legal.jsx  Login.jsx  ManageAdmins.jsx  NotFound.jsx  OurTeam.jsx  Profile.jsx  ReportError.jsx  SellerDashboard.jsx  SellerIssues.jsx  Signup.jsx  TermsAndConditions.jsx  User.jsx
frontend/src/routes/: routes.jsx  (+3 more)
(+11 files in other folders)
